# bcmr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md  SECURITY.md  install.sh  install_cn.sh  test_bcmr.sh  todo.md
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml  release.yml  test.yml  update-homebrew.yml  winget.yml
bench/: cas_lru.sh  compress_e2e.sh  compress_probe.rs  crypto_probe.rs  dedup_breakdown.rs  dedup_demo.sh  gen_workload.sh  run_fast.sh  run_local.sh  run_remote.sh  sweep_jobs.sh
commands/: README.md  check.md  completions.md  copy.md  deploy.md  init.md  move.md  remove.md  status.md  update.md
diagrams/: README.md  scc_dataflow.d2  wire_cas_lru.d2
docs/: configuration.md  docs.config.ts  getting-started.md  index.md  package-lock.json  package.json  progress-display.md  remote-copy.md  shell-integration.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/ablation/: README.md  index.md  local-perf.md  no-rolling-checksum.md  open-questions.md  path-b-design.md  scc.md  wire-protocol.md
docs/ablation/diagrams/: local_concurrent_copy.d2  local_spawn_blocking.d2  scc_crash_safety.d2  wire_cap_fast.d2
docs/cli/: commands.md  index.md
docs/guide/: configuration.md  getting-started.md  progress-display.md  remote-copy.md  shell-integration.md
docs/superpowers/plans/: 2026-03-29-bcmr-serve.md
docs/zh/: configuration.md  getting-started.md  index.md  progress-display.md  remote-copy.md  shell-integration.md
docs/zh-Hant/: configuration.md  getting-started.md  index.md  progress-display.md  remote-copy.md  shell-integration.md
docs/zh-Hant/cli/: commands.md  index.md
docs/zh-Hant/guide/: configuration.md  getting-started.md  progress-display.md  remote-copy.md  shell-integration.md
docs/zh/cli/: commands.md  index.md
docs/zh/guide/: configuration.md  getting-started.md  progress-display.md  remote-copy.md  shell-integration.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_message.rs
src/: cli.rs  config.rs  copy.rs  init.rs  main.rs  move.rs  output.rs  progress.rs  remove.rs
src/app/: commands.rs  completions.rs  mod.rs  prompts.rs  runners.rs  status.rs  updates.rs
src/commands/: check.rs  copy.rs  copy_strategies.rs  deploy.rs  init.rs  jobs.rs  mod.rs  move.rs  remote_copy.rs  remove.rs  serve.rs  update.rs
src/commands/copy/: file_copy.rs  overwrite.rs  pipeline_batch.rs
src/commands/remote_copy/: legacy.rs  serve.rs
src/commands/serve/: handlers.rs  rendezvous.rs  session.rs
src/core/: cas.rs  checksum.rs  cleanup.rs  compress.rs  error.rs  framing.rs  io.rs  mod.rs  protocol.rs  protocol_aead.rs  remote.rs  resume.rs  serve_client.rs  session.rs  traversal.rs
src/core/remote/: attrs.rs  ops.rs  resume.rs  ssh_cmd.rs  transfer.rs
src/core/serve_client/: ops.rs  pipelined.rs  pool.rs  promote.rs  test_support.rs
src/core/transport/: mod.rs  ssh.rs
src/ui/: display.rs  inline.rs  json.rs  mod.rs  progress.rs  runner.rs  state.rs  suspend.rs  tui.rs  utils.rs
tests/: e2e_check_tests.rs  e2e_copy_tests.rs  e2e_serve_basic.rs  e2e_serve_direct_tcp.rs  e2e_serve_listen.rs  e2e_serve_pipelined.rs  e2e_serve_tests.rs  proptest_codec.rs  scc_tests.rs  serve_protocol_tests.rs
tests/common/: mod.rs
