[package]
name = "bcmr"
version = "0.3.17"
edition = "2021"
authors = ["Zane Leong"]
description = "Better Copy Move Remove (BCMR) - A modern CLI tool for file operations with progress bar and advanced features"
repository = "https://github.com/Bengerthelorf/bcmr"
license = "GPL-3.0"
keywords = ["cli", "copy", "move", "remove", "filesystem"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }

walkdir = "2.5.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
terminal_size = "0.4.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
parking_lot = "0.12.5"
filetime = "0.2.26"
libc = "0.2.180"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
once_cell = "1.21.3"
regex = "1.12.2"
sha2 = "0.10"

