[package]
name = "bcmr"
version = "0.5.7"
edition = "2021"
authors = ["Zane Leong"]
description = "Better Copy Move Remove (BCMR) - A modern CLI tool for file operations with progress bar and advanced features"
repository = "https://github.com/Bengerthelorf/bcmr"
license = "Apache-2.0"
keywords = ["cli", "copy", "move", "remove", "filesystem"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
include = [
    "/src/**/*",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/README_zh.md",
]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1.49.0", features = ["full"] }

walkdir = "2.5.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
terminal_size = "0.4.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
parking_lot = "0.12.5"
filetime = "0.2.26"
libc = "0.2.180"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
once_cell = "1.21.3"
regex = "1.12.2"
blake3 = "1.5"
reflink-copy = "0.1.28"
signal-hook = "0.3.18"
self_update = { version = "0.43", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "reqwest", "rustls"] }
futures = "0.3"
num_cpus = "1.16"
lz4_flex = { version = "0.11", default-features = false, features = ["std", "safe-encode", "safe-decode"] }
zstd = { version = "0.13", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
xattr = "1.5"

[dev-dependencies]
tempfile = "3"
xattr = "1.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[[example]]
name = "compress_probe"
path = "bench/compress_probe.rs"
