[workspace]
members = []
exclude = ["fuzz"]

[package]
name = "bcmr"
version = "0.6.0"
edition = "2021"
authors = ["Zane Leong"]
description = "A modern cp/mv/scp for humans and agents — inline BLAKE3 verify, crash-safe resume, one CLI for local and SSH"
repository = "https://github.com/Bengerthelorf/bcmr"
license = "Apache-2.0"
keywords = ["cli", "copy", "move", "remove", "filesystem"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
include = [
    "/src/**/*",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/README_zh.md",
]

[features]
default = []
# Gates local-loopback spawners and other APIs used only by integration
# tests and benches. Auto-enabled in dev builds via dev-dependencies of
# the bench/ and tests/ targets; opt-in for release consumers.
test-support = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1.49.0", features = ["full"] }

walkdir = "2.5.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
terminal_size = "0.4.3"
crossterm = "0.29.0"
parking_lot = "0.12.5"
filetime = "0.2.26"
libc = "0.2.180"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
once_cell = "1.21.3"
regex = "1.12.2"
blake3 = "1.5"
reflink-copy = "0.1.28"
signal-hook = "0.3.18"
self_update = { version = "0.44", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "reqwest", "rustls"] }
futures = "0.3"
num_cpus = "1.16"
lz4_flex = { version = "0.11", default-features = false, features = ["std", "safe-encode", "safe-decode"] }
zstd = { version = "0.13", default-features = false }
# Path B direct-TCP transport: RNG for session keys + AES-256-GCM on
# the data plane. BoringSSL-backed, hand-tuned AES-NI / VAES asm on
# x86, hardware AES on ARMv8-A / Apple Silicon. crypto_probe.rs
# measured ~5 GB/s on M-series, ~1.5 GB/s on contended Xeon —
# materially past SSH's ~500 MB/s single-stream ceiling.
ring = "0.17"
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
xattr = "1.5"

[dev-dependencies]
tempfile = "3"
proptest = "1.5"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
xattr = "1.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[[example]]
name = "compress_probe"
path = "bench/compress_probe.rs"

[[example]]
name = "dedup_breakdown"
path = "bench/dedup_breakdown.rs"

[[example]]
name = "crypto_probe"
path = "bench/crypto_probe.rs"
